fixed pictures and spacing

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ ul, ol {
 }
 /*select html and set the background color, color, font family with fallback, and font size. */
 html {
-  background-image: url("https://img.freepik.com/premium-vector/christmas-snowflake-clipart_926202-102.jpg");
+  background-image: url("https://img.freepik.com/premium-vector/christmas-snowflake-clipart_926202-104.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -63,4 +63,13 @@ a:active {
 /*select h1 and h2 elements and change their case to uppercase*/
 h1, h2 {
   text-transform: uppercase;
+}
+
+h2 {
+  text-decoration: underline;
+}
+
+.author {
+  font-weight: bold;
+  font-style: italic;
 }
